# docs/swagger.json
@@ -4,45 +4,6 @@
         "contact": {}
     },
     "paths": {
-        "/api/v1/users/{id}/videos/top": {
-            "get": {
-                "description": "Get top ranked videos for a specific user",
-                "produces": [
-                    "application/json"
-                ],
-                "tags": [
-                    "videos"
-                ],
-                "summary": "Get user's top videos",
-                "parameters": [
-                    {
-                        "type": "integer",
-                        "description": "User ID",
-                        "name": "id",
-                        "in": "path",
-                        "required": true
-                    },
-                    {
-                        "type": "integer",
-                        "default": 10,
-                        "description": "Limit number of results",
-                        "name": "limit",
-                        "in": "query"
-                    }
-                ],
-                "responses": {
-                    "200": {
-                        "description": "OK",
-                        "schema": {
-                            "type": "array",
-                            "items": {
-                                "$ref": "#/definitions/models.Video"
-                            }
-                        }
-                    }
-                }
-            }
-        },
         "/api/v1/videos/top": {
             "get": {
                 "description": "Get top ranked videos globally",
@@ -126,6 +87,9 @@
                 },
                 "likes": {
                     "type": "integer"
+                },
+                "score": {
+                    "type": "number"
                 },
                 "shares": {
                     "type": "integer"
